daily aggregations work in batch mode